flex alignment fixes

--- a/wreck-this/src/WebPages/Bubble/styles.css
+++ b/wreck-this/src/WebPages/Bubble/styles.css
@@ -1,14 +1,11 @@
 .bubblePage {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-
 }
 
 .navBarContainer {
-    height: 60px;
+    flex: 1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -16,7 +13,13 @@
     background-color: #005073;
     box-shadow: 0 5px 5px 5px #189AD3;
     position:relative;
-    z-index: 10;
+    z-index: 10; 
+}
+
+.navBarLogoContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .navBarLogo {
@@ -28,12 +31,13 @@
     justify-content: center;
     align-items: center;
     margin-left: 15px;
-}
+} 
 
 .navBarText {
     color: white;
     font-size: 1.2rem;
-    margin-right: 1150px;
+    margin-left: 15px;
+    margin-top: 10px;
 }
 
 .navBarDestr {
@@ -41,15 +45,14 @@
     flex-direction: row;
     justify-content: right;
     align-items: space-between;
-    /* background-color: blue; */
     margin-right: 20px;
-}
+ } 
 
 .navBarDestrLogo {
     height: 40px;
     max-width: 40px;
     border-radius: 20px;
-    /* background-color: #C18BEF; */
+    background-color: #C18BEF;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,7 +72,7 @@
 }
 
 .main {
-    height: 830px;
+    flex: 13;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -81,3 +84,23 @@
     font-size: 3.2rem;
     font-weight: bold;
 }
+
+
+
+/* .test1 {
+    background-color: blue;
+    flex: 1
+
+}
+
+.test2 {
+    background-color: purple;
+    flex: 2
+
+}
+
+.test3 {
+    background-color: red;
+    flex: 3
+
+} */
